--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ This is where information to be presented to the user is entered.
 
 
 <a href="https://dunmanhigh.moe.edu.sg/">Visit Dunman High School</a>
+<li><a href="https://github.com/eliement">Elie Tan Zhi Le 1J</a></li>
 
 </body>
 </html>
